--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
+    "react-input-mask": "^1.0.6",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.4",
     "react-router-bootstrap": "^0.23.3",
