--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "clone": "^2.1.1",
+    "immutability-helper": "^2.3.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
@@ -11,7 +12,9 @@
     "react-redux": "^5.0.5",
     "react-router": "^3.0.4",
     "react-router-bootstrap": "^0.23.3",
-    "redux": "^3.7.1"
+    "redux": "^3.7.1",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
