--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-bootstrap": "^0.23.3",
     "redux": "^3.7.1",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
