fix bug with groups, update to deploying to gh-pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-address-book",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://oleg-kochura.github.io/Address-book",
   "dependencies": {
     "clone": "^2.1.1",
     "react": "^15.6.1",
@@ -17,12 +18,15 @@
     "reselect": "^3.0.1"
   },
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts": "1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
